--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
+          tag: v$VERSION
           generateReleaseNotes: true
