--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
-          tag: v$VERSION
+          tag: v${{ env.VERSION }}
           generateReleaseNotes: true
