--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Create tag
         run: |
-          git tag v{{ env.$VERSION }}
-          git push origin v{{ env.$VERSION }}
+          git tag v$VERSION
+          git push origin v$VERSION
 
       - name: Create release
         uses: ncipollo/release-action@v1
